# execution-aware-order-book-forecasting

./: .gitignore  Makefile  README.md  pyproject.toml
configs/experiment/: btcusdt_top5_monthly.yaml  btcusdt_top5_monthly_real.yaml  btcusdt_top5_monthly_real_12m.yaml  improvements_smoke.yaml  mvp.yaml  tardis_book25_20250801.yaml
configs/model/: lightgbm.yaml  logistic_regression.yaml  ridge.yaml  (+2 more)
data_manifest/: checksums_real.yml  checksums_real_12m.yml  schema.md  sources_real.yml  sources_real_12m.yml
scripts/: build_datasets.py  build_features_labels.py  build_orderbooks.py  download_sample_data.py  evaluate_predictions.py  make_report_assets.py  normalise_events.py  predict_model.py  prep_features.py  run_backtest.py  run_market_making.py  run_monthly_robustness.py  train_model.py
tests/: _monthly_helpers.py  test_backtest.py  test_contextual_bandit_policy.py  test_control_quote_optimizer.py  test_datasets.py  test_diagnostics.py  test_distributional_metrics.py  test_evaluation.py  test_features.py  test_ingestion.py  test_labels.py  test_latent_state_context.py  test_market_making_accounting.py  test_market_making_fills.py  test_market_making_policies.py  test_markout_labels.py  test_models.py  test_monthly_splits.py  test_monthly_splits_12m.py  test_multitask_selection_score.py  test_normalisation.py  test_orderbook.py  test_quantile_labels.py  test_queue_aware_partial_fills.py  test_regime_features.py  test_schemas.py  test_splits.py  test_tcn_checkpoint_resume.py  test_tcn_exec_multitask.py  test_tcn_return_head_ablation.py  test_training.py
(+82 files in other folders)
