[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lob-forecasting"
version = "0.1.0"
description = "Execution-Aware Multi-Horizon Limit Order Book Forecasting"
requires-python = ">=3.11"
dependencies = [
    # Config
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Data
    "pyarrow>=14.0",
    "pandas>=2.0",
    "numpy>=1.26",
    # Models
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "torch>=2.1",
    # Reporting
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    # LightGBM auto-names features at fit time and warns on nameless predict
    # arrays; both sides use numpy by design, so this is benign noise.
    "ignore:X does not have valid feature names.*:UserWarning",
]
